<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/create_event"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:background="@color/custom_white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/small_action_bar_height"
        android:theme="@style/customToolbarStyle"
        android:background="@color/white"
        android:elevation="10dp">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/my_toolbar"
        android:fillViewport="true"
        android:id="@+id/scroll_view">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:weightSum="1"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@color/custom_white"
                android:id="@+id/eventImage" />


            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/addedImage" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:srcCompat="@android:drawable/ic_menu_camera"
                android:id="@+id/addImageButton" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/dark_gray"
                    android:maxLines="1"
                    android:hint="Name" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_description"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/dark_gray"
                    android:layout_height="wrap_content"
                    android:hint="Description" />

            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/dark_gray"
                    android:id="@+id/event_date"
                    android:focusable="false"
                    android:hint="Date" />


                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:ems="10"
                    android:id="@+id/event_time"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/dark_gray"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:hint="Time" />


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:id="@+id/input_address_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:textColorHint="@color/dark_gray"
                    android:selectAllOnFocus="true"
                    android:focusable="false"
                    android:hint="Location" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorPrimary"
        android:src="@android:drawable/ic_dialog_map"
        app:backgroundTint="@color/very_light_gray" />

</RelativeLayout>
