...
        android:layout_below="@+id/auto_complete_cardView"
        android:layout_centerHorizontal="true"
        android:id="@+id/locale_select_map"
         />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/set_location_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_dialog_map"
        android:tint="@color/colorPrimary"
        app:backgroundTint="@color/very_light_gray" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/reset_location_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/very_light_gray"
        android:layout_above="@+id/set_location_fab"
        android:layout_alignLeft="@+id/set_location_fab"
...
