...
            android:textColor="@color/dark_gray"
            android:textSize="30sp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_event_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="end|bottom"
...
