...

                        </android.support.v7.widget.RecyclerView>


                        <!-- Use relative layout to position title and favourites icon -->
                        <LinearLayout
                            android:id="@+id/cover"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/image_scroller"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/event_title"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="3"
                                    android:text="Dope"
                                    android:textColor="@color/dark_gray"
                                    android:textSize="30sp" />
...
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:paddingTop="6dp">

                                    <com.joanzapata.iconify.widget.IconTextView
                                        android:id="@+id/favourite_button"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center_horizontal"
                                        android:text="{fa-star-o}"
                                        android:textColor="@color/colorPrimary"
                                        android:textSize="25dp" />

                                    <TextView
                                        android:id="@+id/icon_text"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="Favourite"
                                        android:textColor="@color/dark_gray"
                                        android:textSize="12sp" />
...
                                android:layout_height="wrap_content"
                                android:layout_below="@id/event_title"
                                android:orientation="horizontal"
                                android:paddingTop="8dp">

                                <TextView
                                    android:id="@+id/event_description"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="4"
                                    android:ellipsize="end"
                                    android:maxLength="100"
                                    android:text="cool party I'm hosting"
...
                                    android:textColor="@color/dark_gray"
                                    android:textSize="24sp" />

                            </LinearLayout>

                            <LinearLayout
                                android:id="@+id/time_address"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="3"
                                android:orientation="vertical">


...
                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <!-- default size for empty comment box is 100dp -->
                <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view_comments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="90dp"
                    android:padding="16dp"
                    card_view:cardBackgroundColor="@color/custom_white"
                    card_view:cardElevation="5dp"
...
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/character_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toLeftOf="@+id/post_comment"
                                android:enabled="false"
                                android:maxLength="140"
                                android:paddingRight="16dp"
                                android:paddingTop="13dp"
                                android:visibility="gone" />

                            <com.joanzapata.iconify.widget.IconTextView
                                android:id="@+id/post_comment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentRight="true"
                                android:layout_toLeftOf="@+id/comment_button"
                                android:enabled="false"
                                android:gravity="center_horizontal"
                                android:paddingRight="70dp"
                                android:paddingTop="8dp"
                                android:text="{fa-send-o}"
                                android:textColor="@color/colorPrimary"
...

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.bcn.beacon.beacon.CustomViews.CommentEditText
                                android:id="@+id/write_comment"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_marginRight="6dp"
                                android:enabled="false"
                                android:maxLength="140"
...
                                android:visibility="gone" />
                            <!-- ^ maybe change the size (text size) -->

                        </RelativeLayout>

                        <ListView
                            android:id="@+id/comments_list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="2dp">

                        </ListView>

...
