...
            android:text="{fa-globe}"
            android:background="@color/otherTabColor"
            android:textColor="@color/custom_white"
            android:textSize="30sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="{fa-list-ul}"
            android:background="@color/currentTabColor"
...


    <!-- Place holder for now, will be used to show syncing status -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/tabs"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:elevation="1dp" />

    <LinearLayout
...
