...
        android:paddingBottom="1dp"
        android:text="15 minutes ago..."
        android:textSize="10sp"
        android:textAppearance="?android:attr/textAppearanceListItem" />

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_toRightOf="@id/userPic"
        android:layout_toLeftOf="@+id/edit"
        android:paddingTop="6dp"
...
